<resources>
    <string name="pref_bluetooth_mac" translatable="false">pref_bluetooth_mac</string>
    <string name="pref_recording_interval" translatable="false">pref_recording_interval</string>
    <string name="pref_recording_exact_interval" translatable="false">pref_recording_exact_interval</string>
    <string name="pref_recording_duration_hours" translatable="false">pref_recording_duration_hours</string>
    <string name="pref_recording_duration_minutes" translatable="false">pref_recording_duration_minutes</string>
    <string name="pref_user_name" translatable="false">pref_user_name</string>
    <string name="pref_user_email" translatable="false">pref_user_email</string>
    <string name="pref_user_token" translatable="false">pref_user_token</string>
    <string name="pref_preheating_seconds" translatable="false">pref_preheating_seconds</string>


    <string name="app_name">Environmental Sensing</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_sensor_status">Sensor status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_select_sensor">Select Sensordrone</string>
    <string name="bluetooth_disabled">Bluetooth is disabled now.</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="from_paired_devices">From paired devices</string>
    <string name="pair_new_devices">Or pair new devices</string>
    <string name="scan">Scan</string>
    <string name="dialog_select_device_confirm_message">%1$s (%2$s) seems not a Sensordrone device. Select it anyway?</string>
    <string name="dialog_select_device_confirm_title">Selection confirm</string>
    <string name="pref_bluetooth_mac_title">Bluetooth address</string>
    <string name="press_to_select">Press to select</string>
    <string name="connect_fail">Connect fail.</string>
    <string name="sensor_not_connect">Sensordrone is not connected.</string>
    <string name="sensor_is_connecting">Sensordrone is connecting.</string>
    <string name="connect">Connect</string>
    <string name="sensor_connected">Sensordrone is connected.</string>
    <string name="disconnect">Disconnect</string>
    <string name="bluetooth_not_found">Cannot access Bluetooth.</string>
    <string name="mac_address">MAC address</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_voltage_and_charging_status">%1$.2fV (%2$s)</string>
    <string name="battery_in_charging">in charging</string>
    <string name="battery_not_in_charging">not changing</string>
    <string name="need_to_select_sensor">Please go settings to select Sensordrone first.</string>
    <string name="version_number">Version number</string>
    <string name="version_hardware_firmware">Hardware v%1$s, firmware v%2$s.%3$s</string>
    <string name="record_service_running">Recording environmental indicators cyclically.</string>
    <string name="start">Start</string>
    <string name="title_section_recording">Recording</string>
    <string name="title_record_config">Start new recording task</string>
    <string name="title_record_status">Recording</string>
    <string name="stop">Stop</string>
    <string name="pref_recording_interval_title">Measure interval</string>
    <string name="pref_recording_interval_dialog_title">Select a interval</string>
    <string name="pref_recording_exact_interval_summary">More accurate as well as more battery usage.</string>
    <string name="pref_recording_exact_interval_title">Precise interval</string>
    <string name="recording_duration">Duration</string>
    <string name="auto_stop_in">Auto stop recording in</string>
    <string name="unit_hours">hours</string>
    <string name="unit_minutes">minutes</string>
    <string name="illegal_duration">Please set a duration first.</string>
    <string name="recording_in_progress">Recording is in progress</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="measure_interval">Measure interval</string>
    <string name="certain_seconds">%1$d seconds</string>
    <string name="certain_celsius">%1$02.1f°C</string>
    <string name="certain_percentage">%1$02.1f%%</string>
    <string name="certain_hpa">%1$04.2fhPa</string>
    <string name="certain_ppm">%1$02.1fppm</string>
    <string name="certain_ohm">%1$04.0fΩ</string>
    <string name="certain_degree">%1$f°</string>
    <string name="measure_success_count">No. of success measuring</string>
    <string name="measure_fail_count">No. of failed measuring</string>
    <string name="title_section_raw_data">Raw data</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="monoxide">Carbon dioxide</string>
    <string name="oxidizing">Oxidizing gas</string>
    <string name="reducing">Reducing gas</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="no_data_available">No data yet</string>
    <string name="title_export_data">Export data</string>
    <string name="export_to">Export to</string>
    <string name="change">Change</string>
    <string name="cannot_export_io_exception">Sorry, we cannot export data due to a I/O problem.</string>
    <string name="file_format">File format</string>
    <string name="file_format_cvs">Comma-Separated Values (CSV)</string>
    <string name="export">Export</string>
    <string name="export_ok">Export successfully</string>
    <string name="export_error">Sorry, we cannot export data due to a unexpected error.</string>
    <string name="title_user_login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="auth_fail_message">Username or password incorrect. Please check and retry.</string>
    <string name="network_fail_message">Network error, please try later.</string>
    <string name="unknown_fail_message">Ouch, some bad things happened. Please retry it later.</string>
    <string name="logout">Log out</string>
    <string name="pref_device_title">Device</string>
    <string name="pref_recording_title">Recording</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_account_logout">pref_account_logout</string>
    <string name="click_to_login">(click to login)</string>
    <string name="title_user_register">Create new account</string>
    <string name="password_repeat">Password (again)</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail address</string>
    <string name="username_too_short">3 characters or more.</string>
    <string name="password_no_match">Two password not match.</string>
    <string name="already_have_a_account">I have a account</string>
    <string name="create_new_account">Create new one</string>
    <string name="need_a_account">Need a account?</string>
    <string name="uploading">Uploading environmental data…</string>
    <string name="upload_now">Upload now</string>
    <string name="pref_start_upload">pref_start_upload</string>
    <string name="pref_upload_title">Upload</string>
    <string name="pref_upload_category">pref_upload_category</string>
    <string name="pref_reset_upload_mark">pref_reset_upload_mark</string>
    <string name="reset_upload_mark">Reset all upload mark</string>
    <string name="for_debug">For debugging only</string>
    <string name="touch_for_cancel_upload">Touch for cancel uploading</string>
    <string name="pref_recording_experiment">pref_recording_experiment</string>
    <string name="pref_recording_experiment_title">Enable experiment mode</string>
    <string name="pref_recording_experiment_summary">Allow make single measurement with a tag.</string>
    <string name="tag">Tag</string>
    <string name="measure">Measure</string>
    <string name="recording_experiment">Experiment</string>
    <string name="pref_recording_tag">pref_recording_tag</string>
    <string name="pref_recording_auto_disable">pref_recording_auto_disable</string>
    <string name="pref_recording_auto_disable_title">Auto disable sensors</string>
    <string name="pref_recording_auto_disable_summary">Try to extend battary life of Sensordrone.</string>
    <string name="enabled_sensors">Enabled sensors</string>
    <string name="disable_sensors">Disable all</string>
    <string name="enable_sensors">Enable all</string>
    <string name="pref_about_title">About</string>
    <string name="pref_version">pref_version</string>
    <string name="pref_source_code_title">Open GitHub repository</string>
    <string name="pref_source_code_summary">Access source code and submit issues.</string>
    <string name="pref_version_summary">Touch to display license info.</string>
    <string name="pref_version_title">Version %1$s (%2$s)</string>
    <string name="software_licenses">Software Licenses</string>
    <string name="waiting">Waiting…</string>
    <string name="title_section_maps">Maps</string>
    <string name="choose_date_range">Choose date range</string>
    <string name="data_list_dialog_title">%s records in this area</string>
    <string name="title_data_dialog">Record Information</string>
    <string name="lack_location_permission">Sorry, cannot start recording without location permission.</string>
    <string name="lack_write_storage_permission">Sorry, cannot export data without write external storage permission.</string>
    <string name="notification_disconnected_text">Touch to connect</string>
    <string name="notification_disconnected_title">Sensordrone Disconnected</string>
    <string name="notification_connecting_title">Connecting Sensordrone</string>
    <string name="notification_connecting_text">Wait for seconds…</string>
    <string name="notification_heating_title">Heating up Sensordrone</string>
    <string name="notification_heating_text">Waiting for a few minutes…</string>
    <string name="notification_rest_title">Sensordrone Is Working</string>
    <string name="notification_measuring_title">Sensordrone Is Working</string>
    <string name="notification_rest_text">Waiting for the next measuring.</string>
    <string name="notification_measuring_text">Doing measuring…</string>
    <string name="notification_ready_title">Sensordrone Is Ready</string>
    <string name="notification_ready_text">Touch to start measuring.</string>
    <string name="sensor_status">Status</string>
    <string name="title_sensor_control">Sensor control</string>
    <string name="sensor_state_title">Sensor State</string>
    <string name="sensor_state_unknown">Unknown (waiting…)</string>
    <string name="sensor_state_disconnect">Disconnected</string>
    <string name="sensor_state_connecting">Connecting</string>
    <string name="new_task_title">New Task</string>
    <string name="sensor_state_ready">Ready to start task</string>
    <string name="sensor_state_heating">Heating (waiting for a few minutes)</string>
    <string name="in_task_title">Task Detail</string>
    <string name="sensor_state_task_rest">In task (waiting for next measuring)</string>
    <string name="sensor_state_task_measuring">In task (measuring)</string>
    <string name="title_section_exit">Exit</string>
    <string name="pref_preheating_seconds_title">Preheating duration</string>
    <string name="pref_preheating_seconds_summary">Waiting how many seconds before start measuring.</string>
    <string name="wrong_preheating_seconds">Should be a positive integer which less than 3600.</string>
</resources>
