<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_bluetooth_mac"
        android:title="@string/pref_bluetooth_mac" />

    <ListPreference
        android:key="pref_recording_interval"
        android:title="@string/pref_recording_interval"
        android:dialogTitle="@string/pref_recording_interval_dialog_title"
        android:entries="@array/pref_recording_interval_entries"
        android:entryValues="@array/pref_recording_interval_values"
        android:defaultValue="300" />

    <CheckBoxPreference
        android:key="pref_recording_exact_interval"
        android:title="@string/pref_recording_exact_interval"
        android:summary="@string/pref_recording_exact_interval_summary"
        android:defaultValue="false" />

</PreferenceScreen>