<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="mo.edu.ipm.stud.environmentalsensing.fragments.SensorSelectionFragment">

    <LinearLayout
        android:id="@+id/bluetooth_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_disabled"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_bluetooth"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_enable_bluetooth" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetooth_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_paired_devices" />
        <ListView
            android:id="@+id/list_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pair_new_devices" />

        <ListView
            android:id="@+id/list_unpaired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_gravity="end" />

    </LinearLayout>

</LinearLayout>
