<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="mo.edu.ipm.stud.environmentalsensing.fragments.ExportDataFragment">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_format" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/file_format_cvs" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_to" />

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:textColor="@android:color/primary_text_light"
        android:id="@+id/text_export_path" />

</LinearLayout>
